force-app/main/default/objects/Object_Specific_Setting__mdt/Object_Specific_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Object Specific Setting</label>
    <pluralLabel>Object Specific Settings</pluralLabel>
</CustomObject>