force-app/main/default/objects/Object_Specific_Setting__mdt/fields/Bypass_Apex_Action__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Apex_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Apex Action</label>
    <type>Checkbox</type>
</CustomField>