force-app/main/default/objects/Object_Specific_Setting__mdt/fields/Bypass_Apex_Action_method_1__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Apex_Action_method_1__c</fullName>
    <label>Bypass Apex Action method 1</label>
    <type>TextArea</type>
</CustomField>