force-app/main/default/objects/Object_Specific_Setting__mdt/fields/Bypass_Trigger_Methods_2__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Trigger_Methods_2__c</fullName>
    <label>Bypass Trigger Methods 2</label>
    <type>TextArea</type>
</CustomField>