force-app/main/default/objects/Object_Specific_Setting__mdt/fields/Bypass_Trigger_Methods_3__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Trigger_Methods_3__c</fullName>
    <label>Bypass Trigger Methods 3</label>
    <type>TextArea</type>
</CustomField>