force-app/main/default/objects/Object_Specific_Setting__mdt/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <length>30</length>
    <type>Text</type>
</CustomField>