force-app/main/default/objects/Object_Specific_Setting__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>Name of the Object to which the Setting needs to be applied</description>
    <label>Object Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>