force-app/main/default/objects/Object_Specific_Setting__mdt/listViews/All_Data111.listView-meta.xml
<ListView>
    <fullName>All_Data111</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Object_Name__c</columns>
    <columns>Bypass_Triggers__c</columns>
    <columns>Bypass_Trigger_Methods_1__c</columns>
    <columns>Bypass_Trigger_Methods_2__c</columns>
    <columns>Bypass_Trigger_Methods_3__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Data</label>
    <language>en_US</language>
</ListView>